@@ -222,6 +222,16 @@ namespace OpenRA.Utility
 					}
 				}
 
+				// ChronoshiftDeploy was replaced with PortableChrono
+				if (engineVersion < 20140321)
+				{
+					if (depth == 1 && node.Key == "ChronoshiftDeploy")
+						node.Key = "PortableChrono";
+
+					if (depth == 2 && parentKey == "PortableChrono" && node.Key == "JumpDistance")
+						node.Key = "MaxDistance";
+				}
+
 				UpgradeActorRules(engineVersion, ref node.Value.Nodes, node, depth + 1);
 			}
 		}
