@@ -74,6 +74,7 @@ NEW:
 		Added the submarine detection ability to Submarines and Missile Subs.
 		Increased the submarine detection range of Gunboat from 3 to 4.
 		Fixed Spies having an enemy color health bar when disguised as a friendly unit (occurred using the Team Health Colors setting).
+		Chrono Tanks can now be teleported in groups by holding SHIFT or ALT and issuing a move order.
 	Tiberian Dawn:
 		Chinook rotors now counter-rotate.
 		Commando can now plant C4 on bridges.
@@ -129,6 +130,8 @@ NEW:
 		Muzzleflash definitions have moved from WithMuzzleFlash to each Armament. Only one WithMuzzleFlash is now required per actor.
 		Added an AttackGarrisoned trait that allows passengers to fire through a set of defined ports.
 		Maps can define initial cargo for actors by adding "Cargo: actora, actorb, ..." to the actor reference.
+		Modified Teleport activity to use the best/closest open cell to the target destination for teleports (for ChronoshiftPower this only applies on the return trip).
+		Renamed ChronoshiftDeploy trait to PortableChrono.
 	Server:
 		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
 	Asset Browser:
